--- a/application/views/mall.html
+++ b/application/views/mall.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>详情页</title>
-    <link rel="stylesheet" href="../styles/css/common_style.css"/>
-    <link rel="stylesheet" href="../styles/css/mall.css"/>
-    <script src="../components/jquery-1.11.1.min.js"></script>
+    <link rel="stylesheet" href="../application/styles/css/common_style.css"/>
+    <link rel="stylesheet" href="../application/styles/css/mall.css"/>
+    <script src="../application/components/jquery-1.11.1.min.js"></script>
 </head>
 <body>
 <section class="page_main">
@@ -42,7 +42,7 @@
 <nav class="mall_nav">
     <ul class="nav_list">
         <li>
-            <a href="###"><span>分类</span><div><img src="../images/mall_tri.png"/></div></a>
+            <a href="###"><span>分类</span><div><img src="../application/images/mall_tri.png"/></div></a>
             <ul class="tab-list hide">
                 <!--此处为数据迭代处，下同-->
                 <li><a href="###">asdasdsad</a> </li>
@@ -53,19 +53,19 @@
             </ul>
         </li>
         <li>
-            <a href="###"><span>品牌</span><div><img src="../images/mall_tri.png"/></div></a>
+            <a href="###"><span>品牌</span><div><img src="../application/images/mall_tri.png"/></div></a>
             <ul class="tab-list hide">
                 <li><a href="###">asdasdsad</a> </li>
             </ul>
         </li>
         <li>
-            <a href="###"><span>价格</span><div><img src="../images/mall_tri.png"/></div></a>
+            <a href="###"><span>价格</span><div><img src="../application/images/mall_tri.png"/></div></a>
             <ul class="tab-list hide">
                 <li><a href="###">asdasdsad</a> </li>
             </ul>
         </li>
         <li>
-            <a href="###"><span>销量</span><div><img src="../images/mall_tri.png"/></div></a>
+            <a href="###"><span>销量</span><div><img src="../application/images/mall_tri.png"/></div></a>
             <ul class="tab-list hide">
                 <li><a href="###">asdasdsad</a> </li>
             </ul>
@@ -87,6 +87,6 @@
     </ul>
 </footer>
 
-<script src="../scripts/mall.js"></script>
+<script src="../application/scripts/mall.js"></script>
 </body>
 </html>
