--- a/application/views/detail.html
+++ b/application/views/detail.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <title>商城</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" href="../styles/css/common_style.css"/>
-    <link rel="stylesheet" href="../styles/css/detail.css"/>
-    <script src="../components/jquery-1.11.1.min.js"></script>
+    <link rel="stylesheet" href="../application/styles/css/common_style.css"/>
+    <link rel="stylesheet" href="../application/styles/css/detail.css"/>
+    <script src="../application/components/jquery-1.11.1.min.js"></script>
 </head>
 <body>
 <section class="page_main">
     <section class="carousel_space">
-        <div class="left_bar"><img src="../images/left.png"/></div>
-        <div class="right_bar"><img src="../images/right.png"/></div>
+        <div class="left_bar"><img src="../application/images/left.png"/></div>
+        <div class="right_bar"><img src="../application/images/right.png"/></div>
         <section class="main_space">
             <div class="aPiece active"><img src=""/> </div>
             <div class="aPiece next"><img src=""/> </div>
@@ -37,7 +37,7 @@
 
 </section>
 
-<script src="../scripts/main.js"></script>
-<script src="../scripts/carousel.js"></script>
+<script src="../application/scripts/main.js"></script>
+<script src="../application/scripts/carousel.js"></script>
 </body>
 </html>
