some little change

--- a/application/views/user_product.html
+++ b/application/views/user_product.html
@@ -17,13 +17,12 @@
             <li class="required"><span>卖家：</span><input type="text" required="required" name="seller"/></li>
             <li class="required"><span>品牌：</span><input type="text" required="required" name="brand"/></li>
             <li class="required"><span>型号：</span><input type="text" required="required" name="model"/></li>
-            <li class="required"><span>拟售物价格：</span><input type="text" required="required" name="seller"/></li>
-            <li><span>原购价格：</span><input type="text" name="seller"/></li>
+            <li class="required"><span>拟售物价格：</span><input type="text" required="required" name="sell_price"/></li>
+            <li><span>原购价格：</span><input type="text" name="buy_price"/></li>
             <li><span>原产地：</span><input type="text" name="origin"/></li>
             <li class="required"><span>新旧程度：</span><input type="text" required="required" name="new"/></li>
             <li><span>是否维修过：</span><input type="text" name="repair"/></li>
             <li><span>是否过拆机：</span><input type="text" name="remove"/></li>
-            <li><span>原产地：</span><input type="text" name="origin"/></li>
             <li>
                 <span>商品转手次数：</span>
                 <select name="transfer">
