添加登录和注册窗口

--- a/application/views/mixin/footer.html
+++ b/application/views/mixin/footer.html
@@ -6,5 +6,7 @@
         <li><a href="javascript:;">杂志</a></li>
         <li><a href="javascript:;">论坛</a></li>
         <li><a href="javascript:;">联系我们</a></li>
+        <li class="sign_up_footer"><a href="javascript:;">登录</a></li>
+        <li class="log_in_footer"><a href="javascript:;">注册</a></li>
     </ul>
 </footer>
