--- a/application/views/user_product.html
+++ b/application/views/user_product.html
@@ -73,5 +73,6 @@
 
 <script src="../components/Validform_v5.3.2_min.js"></script>
 <script src="../scripts/user_product.js"></script>
+<script src="../scripts/common.js"></script>
 </body>
 </html>
