--- a/application/views/mixin/login.html
+++ b/application/views/mixin/login.html
@@ -1,4 +1,6 @@
 <div class="sign_up hide">
+    <div class="close">x</div>
+
     <h1>注册用户登录</h1>
     <label class="user_name">
         <span>用户名</span>
@@ -19,6 +21,8 @@
 
 
 <div class="log_in hide">
+    <div class="close">x</div>
+
     <h1>新用户注册</h1>
     <label class="user_name">
         <span>用户名</span>
