--- a/application/views/mall.html
+++ b/application/views/mall.html
@@ -76,7 +76,8 @@
     </div>
 </nav>
 
-
+<script src="../application/scripts/main.js"></script>
+<script src="../application/scripts/common.js"></script>
 <script src="../application/scripts/mall.js"></script>
 </body>
 </html>
