--- a/application/views/user_center.html
+++ b/application/views/user_center.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <title>个人中心</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" href="../styles/css/user_center.css"/>
-    <link rel="stylesheet" href="../styles/css/common_style.css"/>
-    <script src="../components/jquery-1.11.1.min.js"></script>
+    <link rel="stylesheet" href="../application/styles/css/user_center.css"/>
+    <link rel="stylesheet" href="../application/styles/css/common_style.css"/>
+    <script src="../application/components/jquery-1.11.1.min.js"></script>
 </head>
 <body>
 <section class="page_main">
@@ -58,6 +58,6 @@
     </div>
 </section>
 
-<script src="../scripts/user_center.js"></script>
+<script src="../application/scripts/user_center.js"></script>
 </body>
 </html>
