--- a/application/views/mixin/login.html
+++ b/application/views/mixin/login.html
@@ -30,15 +30,15 @@
     </label>
     <label class="user_psw">
         <span>密&emsp;码</span>
-        <input type="password" class="user_psw_input" required="required" name="user_psw"/>
+        <input type="password" id="password" class="user_psw_input" required="required" name="user_psw"/>
     </label>
     <label class="repeat_psw">
         <span>重复密码</span>
-        <input type="password" class="repeat_psw_input" required="required" name="user_psw"/>
+        <input type="password" id="retype" class="repeat_psw_input" required="required" name="user_psw"/>
     </label>
     <label class="user_mail">
         <span>援助邮箱</span>
-        <input type="email" class="user_mail" required="required" name="user_mail"/>
+        <input type="email" id="email" class="user_mail" required="required" name="user_mail"/>
     </label>
     <div class="agreement">
         <h1>网站协议</h1>
