--- a/application/views/user_center.html
+++ b/application/views/user_center.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <title>个人中心</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" href="../application/styles/css/user_center.css"/>
-    <link rel="stylesheet" href="../application/styles/css/common_style.css"/>
-    <script src="../application/components/jquery-1.11.1.min.js"></script>
+    <link rel="stylesheet" href="../../../../application/styles/css/user_center.css"/>
+    <link rel="stylesheet" href="../../../../application/styles/css/common_style.css"/>
+    <script src="../../../../application/components/jquery-1.11.1.min.js"></script>
 </head>
 <body>
 <section class="page_main">
@@ -14,8 +14,8 @@
         <h1>个人中心</h1>
         <div class="user_info">
             <div class="user_avatar"></div>
-            <span>用户昵称用户昵称</span>
-            <div class="user_banner">用户自定义banner</div>
+            <span>用户昵称</span>
+            <div class="user_banner"><a style="color:#000" href="../../../../index.php/ucenter/logout">点此退出</a></div>
         </div>
     </div>
     <ul class="user_tab">
@@ -33,8 +33,8 @@
                     <colgroup class="row1" style="color:white"></colgroup>
                     <colgroup class="row2"></colgroup>
                     <tr>
-                        <th>我的积分：</th>
-                        <td>123123123</td>
+                        <th>我的音特币：</th>
+                        <td>0</td>
                     </tr>
                     <tr>
                         <th>我的订单：</th>
@@ -58,6 +58,6 @@
     </div>
 </section>
 
-<script src="../application/scripts/user_center.js"></script>
+<script src="../../../../application/scripts/user_center.js"></script>
 </body>
 </html>
