--- a/application/views/user_product.html
+++ b/application/views/user_product.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>用户商品登记</title>
-    <link rel="stylesheet" href="../styles/css/common_style.css"/>
-    <link rel="stylesheet" href="../styles/css/user_product.css"/>
+    <link rel="stylesheet" href="../../../application/styles/css/common_style.css"/>
+    <link rel="stylesheet" href="../../../application/styles/css/user_product.css"/>
 
-    <script src="../components/jquery-1.11.1.min.js"></script>
+    <script src="../../../application/components/jquery-1.11.1.min.js"></script>
 </head>
 <body>
 
@@ -59,8 +59,8 @@
             <div class="example">
                 <h2>示例图片</h2>
                 <div class="example-img">
-                    <img src="../images/user_product_1.jpg"/>
-                    <img src="../images/user_product_2.jpg"/>
+                    <img src="../../../application/images/user_product_1.jpg"/>
+                    <img src="../../../application/images/user_product_2.jpg"/>
                 </div>
 
             </div>
@@ -71,8 +71,8 @@
 </section>
 
 
-<script src="../components/Validform_v5.3.2_min.js"></script>
-<script src="../scripts/user_product.js"></script>
-<script src="../scripts/common.js"></script>
+<script src="../../../application/components/Validform_v5.3.2_min.js"></script>
+<script src="../../../application/scripts/user_product.js"></script>
+<script src="../../../application/scripts/common.js"></script>
 </body>
 </html>
